Fix wrong spacing

--- a/src/client/register/RegisterBody.css
+++ b/src/client/register/RegisterBody.css
@@ -102,6 +102,11 @@
     }
 
     & h3 {
+      margin-top: 20px;
+      margin-bottom: 0;
+    }
+
+    & h3:first-of-type {
       margin-top: 0;
       margin-bottom: 0;
     }
